--- a/index.html
+++ b/index.html
@@ -1,1 +1,152 @@
-还读我诗
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>还读我诗开始征稿啦！</title>
+	<link rel="shortcut icon" href="hdws.ico" type="image/x-icon" />
+	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
+	<script src="../js/bdtj.js"></script>
+	<style>
+		*{
+			margin:0;
+			padding:0;
+		}
+		body{
+			width:100%;
+			font-family:'微软雅黑','宋体',sans-serif;
+			background: #bfe3f9;
+		}
+		h1{
+			position:fixed;
+			top:0;
+			left:0;
+			width:100%;
+			height:66px;
+			line-height: 66px;
+			font-weight:normal;
+			text-align:center;
+			color:#fff;
+			background: #e65b61;
+		}
+		.imgbox{
+			margin:0 auto;
+			width:900px;
+			height:500px;
+			margin-top:150px;
+			margin-bottom:150px;
+		}
+		.imgbox img{
+			width:100%;
+			height:100%;
+		}
+		.cont{
+			width:900px;
+			margin:0 auto;
+			margin-bottom:50px;
+		}
+		.cont .text{
+			float:left;
+			padding-left:50px;
+			width:381px;
+		}
+		.cont .text h4{
+			margin-bottom:15px;
+			font-size:20px;
+			color:#666;
+			font-weight: normal;
+			line-height: 24px;
+		}
+		.cont .text p{
+			margin-bottom:10px;
+			font-size:16px;
+			color:#666;
+			line-height: 24px;
+			text-align: justify;
+		}
+		.cont .text p a{
+			color:#e65b61;
+		}
+		.cont .text p a:active{
+			color:#e65b61;
+		}
+		.cont .weixin{
+			float:right;
+			width:469px;
+			min-height: 315px;
+		}
+		.cont .weixin .erweima{
+			margin-top:66px;
+			margin-left:200px;
+			width:200px;
+			height:200px;
+		}
+		.cont .weixin .erweima img{
+			width:100%;
+			height:100%;
+		}
+		.cont .text p.red{
+			color:#e65b61;
+		}
+		.footer11{
+			height:40px;
+			width:100%;
+			background: #e65b61;
+			font-size:16px;
+			color:#fff;
+			text-align:center;
+			line-height: 40px;
+		}
+		.clearfix:after{
+			content:'.'; 
+			display:block;
+			height:0;
+			clear:both;
+			visibility:hidden 
+		}
+		.clearfix{
+			zoom:1;
+		}
+	</style>
+</head>
+<body>
+	<audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
+        <source src="../song/mp3/ganxie.mp3" type="audio/ogg">
+    </audio>
+	<h1>还读我诗开始征稿啦！</h1>
+	<div class="imgbox">
+		<img src="hdws.jpg" alt="">
+	</div>
+	<div class="cont clearfix">
+		<div class="text">
+			<h4>作品要求：</h4>
+			<p>1. 体裁及话题：诗歌，散文，小说均可，形式不限，文字不限，观点不限，期待您思想的火花，作者如有个人写作想法，欢迎与本刊编辑部联系告诉我们您擅长的内容。</p>
+			<p>2. 投稿方式：采用电子邮件的方式投稿，以便我们与您联系，稿件采用Word文档格式。</p>
+			<p class="red">投稿E-mail: <a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
+			<p>3. 联系方式：</p>
+			<p class="red">微信: Liyufeng5658，QQ: 670106385</p>
+			<p class="red">想了解本刊内容可扫描右侧二维码添加微刊公众号</p>
+		</div>
+		<div class="weixin">
+			<!-- <img src="" alt=""> -->
+			<div class="erweima">
+				<img src="./erweima.jpg" alt="">
+			</div>
+		</div>
+	</div>
+	<div class="footer11">Copyright @还读我诗 2017</div>
+	<script>
+		$(function(){ 
+    		$(window).scroll(function(){ 
+        		if(arrviedAtBottom()) { 
+            		$('h1').css('display','none')
+        		} 
+    		}); 
+
+    		var arrivedAtBottom = function () { 
+        		return $(document).scrollTop() + $(window).height() == $(document).height(); 
+    		} 
+		}); 	
+
+	</script>
+</body>
+</html>
