--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>还读我诗开始征稿啦！</title>
-	<link rel="shortcut icon" href="hdws.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<script src="../js/bdtj.js"></script>
 	<style>
@@ -110,11 +110,11 @@
 </head>
 <body>
 	<audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
-        <source src="../song/mp3/ganxie.mp3" type="audio/ogg">
+        <source src="./song/ganxie.mp3" type="audio/ogg">
     </audio>
 	<h1>还读我诗开始征稿啦！</h1>
 	<div class="imgbox">
-		<img src="hdws.jpg" alt="">
+		<img src="./images/hdws.jpg" alt="">
 	</div>
 	<div class="cont clearfix">
 		<div class="text">
@@ -129,7 +129,7 @@
 		<div class="weixin">
 			<!-- <img src="" alt=""> -->
 			<div class="erweima">
-				<img src="./erweima.jpg" alt="">
+				<img src="./images/erweima.jpg" alt="">
 			</div>
 		</div>
 	</div>
