--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		.cont .text p.red{
 			color:#e65b61;
 		}
-		.footer11{
+		.footer{
 			height:40px;
 			width:100%;
 			background: #e65b61;
@@ -127,26 +127,11 @@
 			<p class="red">想了解本刊内容可扫描右侧二维码添加微刊公众号</p>
 		</div>
 		<div class="weixin">
-			<!-- <img src="" alt=""> -->
 			<div class="erweima">
 				<img src="./images/erweima.jpg" alt="">
 			</div>
 		</div>
 	</div>
-	<div class="footer11">Copyright @还读我诗 2017</div>
-	<script>
-		$(function(){ 
-    		$(window).scroll(function(){ 
-        		if(arrviedAtBottom()) { 
-            		$('h1').css('display','none')
-        		} 
-    		}); 
-
-    		var arrivedAtBottom = function () { 
-        		return $(document).scrollTop() + $(window).height() == $(document).height(); 
-    		} 
-		}); 	
-
-	</script>
+	<div class="footer">Copyright © 2017　还读我诗 版权所有</div>
 </body>
 </html>
