--- a/index.html
+++ b/index.html
@@ -87,6 +87,27 @@
 		.cont .text p.red{
 			color:#e65b61;
 		}
+		.button{
+			display:block;
+			width:80px;
+			height:40px;
+			line-height:40px;
+			text-align: center;
+			padding:10px;
+			border:1px solid #999;
+			border-radius: 10px;
+			position:fixed;
+			top:50%;
+			right:50px;
+			text-decoration: none;
+			color:#666;
+			cursor:pointer;
+		}
+		.button:hover{
+			background: #e65b61;
+			color:#fff;
+			border:1px solid #e65b61;
+		}
 		.footer{
 			height:40px;
 			width:100%;
@@ -132,6 +153,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">Copyright © 2017　还读我诗 版权所有</div>
+	<a class="button" href="./list.html" target="_blank">往期欣赏</a>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有</div>
 </body>
 </html>
