--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>还读我诗开始征稿啦！</title>
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<script src="../js/bdtj.js"></script>
+	<script src="./js/bdtj.js"></script>
 	<style>
 		*{
 			margin:0;
@@ -154,6 +154,6 @@
 		</div>
 	</div>
 	<a class="button" href="./list.html" target="_blank">往期欣赏</a>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有</div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank">网站统计</a></div>
 </body>
 </html>
