--- a/index.html
+++ b/index.html
@@ -2,37 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>还读我诗开始征稿啦！</title>
+	<title>还读我诗欢迎您！</title>
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="./css/common.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<script src="./js/bdtj.js"></script>
 	<style>
-		*{
-			margin:0;
-			padding:0;
-		}
-		body{
-			width:100%;
-			font-family:'微软雅黑','宋体',sans-serif;
-			background: #bfe3f9;
-		}
-		h1{
-			position:fixed;
-			top:0;
-			left:0;
-			width:100%;
-			height:66px;
-			line-height: 66px;
-			font-weight:normal;
-			text-align:center;
-			color:#fff;
-			background: #e65b61;
-		}
 		.imgbox{
 			margin:0 auto;
 			width:900px;
 			height:500px;
-			margin-top:150px;
+			margin-top:80px;
 			margin-bottom:150px;
 		}
 		.imgbox img{
@@ -42,7 +22,7 @@
 		.cont{
 			width:900px;
 			margin:0 auto;
-			margin-bottom:50px;
+			margin-bottom:100px;
 		}
 		.cont .text{
 			float:left;
@@ -72,10 +52,10 @@
 		.cont .weixin{
 			float:right;
 			width:469px;
-			min-height: 315px;
+			min-height: 400px;
 		}
 		.cont .weixin .erweima{
-			margin-top:66px;
+			margin-top:123px;
 			margin-left:200px;
 			width:200px;
 			height:200px;
@@ -87,53 +67,24 @@
 		.cont .text p.red{
 			color:#e65b61;
 		}
-		.button{
-			display:block;
-			width:80px;
-			height:40px;
-			line-height:40px;
-			text-align: center;
-			padding:10px;
-			border:1px solid #999;
-			border-radius: 10px;
-			position:fixed;
-			top:50%;
-			right:50px;
-			text-decoration: none;
-			color:#666;
-			cursor:pointer;
-		}
-		.button:hover{
-			background: #e65b61;
-			color:#fff;
-			border:1px solid #e65b61;
-		}
-		.footer{
-			height:40px;
-			width:100%;
-			background: #e65b61;
-			font-size:16px;
-			color:#fff;
-			text-align:center;
-			line-height: 40px;
-		}
-		.clearfix:after{
-			content:'.'; 
-			display:block;
-			height:0;
-			clear:both;
-			visibility:hidden 
-		}
-		.clearfix{
-			zoom:1;
-		}
 	</style>
 </head>
 <body>
 	<audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
         <source src="./song/ganxie.mp3" type="audio/ogg">
     </audio>
-	<h1>还读我诗开始征稿啦！</h1>
+	<!-- <h1>还读我诗开始征稿啦！</h1> -->
+	<div class="header">
+		<div class="header-cont">
+			<a href="./index.html"><img class="logo" src="./images/logo.jpg" alt=""></a>
+			<ul class="nav">
+				<li><a href="./index.html" class="active">首页</a></li>
+				<li><a href="./about.html">关于我们</a></li>
+				<li><a href="./list.html">往期欣赏</a></li>
+				<li><a href="./college.html">大学生专栏</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class="imgbox">
 		<img src="./images/hdws.jpg" alt="">
 	</div>
@@ -141,11 +92,12 @@
 		<div class="text">
 			<h4>作品要求：</h4>
 			<p>1. 体裁及话题：诗歌，散文，小说均可，形式不限，文字不限，观点不限，期待您思想的火花，作者如有个人写作想法，欢迎与本刊编辑部联系告诉我们您擅长的内容。</p>
-			<p>2. 投稿方式：采用电子邮件的方式投稿，以便我们与您联系，稿件采用Word文档格式。</p>
+			<p>2. 稿酬情况：100元／稿，大学生作品专栏每月更新一期，每期选稿三篇，敬请关注。</p>
+			<p>3. 投稿方式：采用电子邮件的方式投稿，以便我们与您联系，稿件采用Word文档格式。</p>
 			<p class="red">投稿E-mail: <a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
-			<p>3. 联系方式：</p>
+			<p>4. 联系方式：</p>
 			<p class="red">微信: Liyufeng5658，QQ: 670106385</p>
-			<p class="red">想了解本刊内容可扫描右侧二维码添加微刊公众号</p>
+			<p class="red">想了解本刊内容可扫描右侧二维码添加微刊公众号<br>PS.征稿长期有效，希望早日见到您的文字！</p>
 		</div>
 		<div class="weixin">
 			<div class="erweima">
@@ -153,7 +105,6 @@
 			</div>
 		</div>
 	</div>
-	<a class="button" href="./list.html" target="_blank">往期欣赏</a>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank">网站统计</a></div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
 </body>
 </html>
