--- a/list.html
+++ b/list.html
@@ -4,35 +4,15 @@
 	<meta charset="UTF-8">
 	<title>还读我诗，往期优秀诗篇</title>
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="./css/common.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<script src="../js/bdtj.js"></script>
+	<script src="./js/bdtj.js"></script>
 	<style>
-		*{
-			margin:0;
-			padding:0;
-		}
-		body{
-			width:100%;
-			font-family:'微软雅黑','宋体',sans-serif;
-			background: #bfe3f9;
-		}
-		h1{
-			position:fixed;
-			top:0;
-			left:0;
-			width:100%;
-			height:66px;
-			line-height: 66px;
-			font-weight:normal;
-			text-align:center;
-			color:#fff;
-			background: #e65b61;
-		}
 		.content{
 			margin:0 auto;
 			width:900px;
 			min-height:666px;
-			margin-top:110px;
+			margin-top:50px;
 			margin-bottom:30px;
 		}
 		.content ul{
@@ -74,29 +54,20 @@
 		.content ul li a:hover h2,.content ul li a:hover p{
 			color:#fff
 		}
-		.footer{
-			height:40px;
-			width:100%;
-			background: #e65b61;
-			font-size:16px;
-			color:#fff;
-			text-align:center;
-			line-height: 40px;
-		}
-		.clearfix:after{
-			content:'.'; 
-			display:block;
-			height:0;
-			clear:both;
-			visibility:hidden 
-		}
-		.clearfix{
-			zoom:1;
-		}
 	</style>
 </head>
 <body>
-	<h1>还读我诗，往期优秀诗篇欣赏</h1>
+	<div class="header">
+		<div class="header-cont">
+			<a href="./index.html"><img class="logo" src="./images/logo.jpg" alt=""></a>
+			<ul class="nav">
+				<li><a href="./index.html">首页</a></li>
+				<li><a href="./about.html">关于我们</a></li>
+				<li><a href="./list.html" class="active">往期欣赏</a></li>
+				<li><a href="./college.html">大学生专栏</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class="content">
 		<ul class="clearfix">
 			<li>
@@ -199,6 +170,6 @@
 			</li>
 		</ul>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有</div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
 </body>
 </html>
