--- a/about.html
+++ b/about.html
@@ -2,39 +2,63 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>关于我们</title>
+	<title>联系我们</title>
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
+	<link rel="stylesheet" href="./css/about.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<script src="./js/bdtj.js"></script>
 	<style>
-		.content{
-			margin:0 auto;
-			width:900px;
-			min-height:666px;
-			margin-top:110px;
-			margin-bottom:30px;
-			font-size:32px;
-			color:teal;
-			line-height: 666px;
-			text-align: center;
-		}
+		
 	</style>
 </head>
 <body>
 	<div class="header">
-		<div class="header-cont">
-			<a href="./index.html"><img class="logo" src="./images/logo.jpg" alt=""></a>
+		<div class="header-cont clearfix">
+			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
-				<li><a href="./about.html" class="active">关于我们</a></li>
-				<li><a href="./list.html">往期欣赏</a></li>
-				<li><a href="./college.html">大学生专栏</a></li>
+				<li><a href="./list.html" target="_blank">往期回顾</a></li>
+				<!-- <li><a href="./college.html" target="_blank">大学生专栏</a></li> -->
+				<li class="active"><a href="./about.html" target="_blank">联系我们</a></li>
 			</ul>
 		</div>
 	</div>
 	<div class="content">
-		这是一个介绍平台的页面，设计一下内容
+		<h1>关于"还读我诗"：</h1>
+		<div class="about">
+			<div class="center-text">
+				<h3>读山海经 <span class="name">｜ 陶渊明</span></h3>
+				<p>孟夏草木长，绕屋树扶疏。</p>
+				<p>众鸟欣有托，吾亦爱吾庐。 </p>
+				<p>既耕亦已种，时还读我书。</p>
+				<p>穷巷隔深辙，颇回故人车。  </p>
+				<p>欢然酌春酒，摘我园中蔬。 </p>
+				<p>微雨从东来，好风与之俱。</p>
+				<p>泛览周王传，流观山海图。 </p>
+				<p>俯仰终宇宙，不乐复何如！</p>
+			</div>
+			<div class="hd-text">
+				<p>今也渊明</p>
+				<p class="indent">时还读书</p>
+				<p>左右相顾</p>
+				<p class="indent">不知谁坐</p>
+			</div>
+		</div>
+		<h1>联系方式：</h1>
+		<div class="msg clearfix">
+			<div class="msg-text">
+				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
+				<p>体裁话题：诗歌，散文，小说均可。</p>
+				<p>投稿方式：电子邮件投稿，Word文档格式。</p>
+				<p>个人微信：<span>Whia2021</span></p>
+				<p>个人微信：<span>Liyufeng5658</span></p>
+				<p>QQ：<span>1722740047，670106385</span></p>
+				<p><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
+			</div>
+			<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
+		</div>
+		<p class="declare">声明：网站所展示诗文均为作者投稿于平台“还读我诗”，一切版权归作者本人所有，如若<span class="show">转载请务必先与作者联系</span>！！谢谢</p>
 	</div>
 	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
 </body>
