--- a/college.html
+++ b/college.html
@@ -2,39 +2,100 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>大学生专栏</title>
+	<title>还读我诗开始征稿啦！</title>
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<script src="./js/bdtj.js"></script>
 	<style>
-		.content{
+		body{
+			background: #bfe3f9;
+		}
+		.imgbox{
 			margin:0 auto;
 			width:900px;
-			min-height:666px;
-			margin-top:110px;
-			margin-bottom:30px;
-			font-size:32px;
-			color:teal;
-			line-height: 666px;
-			text-align: center;
+			height:500px;
+			margin-top:80px;
+			margin-bottom:150px;
+		}
+		.imgbox img{
+			width:100%;
+			height:100%;
+		}
+		.cont{
+			width:900px;
+			margin:0 auto;
+			margin-bottom:100px;
+		}
+		.cont .text{
+			float:left;
+			padding-left:50px;
+			width:381px;
+		}
+		.cont .text h4{
+			margin-bottom:15px;
+			font-size:20px;
+			color:#666;
+			font-weight: normal;
+			line-height: 24px;
+		}
+		.cont .text p{
+			margin-bottom:10px;
+			font-size:16px;
+			color:#666;
+			line-height: 24px;
+			text-align: justify;
+		}
+		.cont .text p a{
+			color:#e65b61;
+		}
+		.cont .text p a:active{
+			color:#e65b61;
+		}
+		.cont .weixin{
+			float:right;
+			width:469px;
+			min-height: 400px;
+		}
+		.cont .weixin .erweima{
+			margin-top:123px;
+			margin-left:200px;
+			width:200px;
+			height:200px;
+		}
+		.cont .weixin .erweima img{
+			width:100%;
+			height:100%;
+		}
+		.cont .text p.red{
+			color:#e65b61;
 		}
 	</style>
 </head>
 <body>
-	<div class="header">
-		<div class="header-cont">
-			<a href="./index.html"><img class="logo" src="./images/logo.jpg" alt=""></a>
-			<ul class="nav">
-				<li><a href="./index.html">首页</a></li>
-				<li><a href="./about.html">关于我们</a></li>
-				<li><a href="./list.html">往期欣赏</a></li>
-				<li><a href="./college.html" class="active">大学生专栏</a></li>
-			</ul>
-		</div>
+	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
+        <source src="./song/ganxie.mp3" type="audio/ogg">
+    </audio> -->
+	<!-- <h1>还读我诗开始征稿啦！</h1> -->
+	<div class="imgbox">
+		<img src="./images/hdws.jpg" alt="">
 	</div>
-	<div class="content">
-		大学生专栏页面，设计一下内容
+	<div class="cont clearfix">
+		<div class="text">
+			<h4>作品要求：</h4>
+			<p>1. 体裁及话题：诗歌，散文，小说均可，形式不限，文字不限，观点不限，期待您思想的火花，作者如有个人写作想法，欢迎与本刊编辑部联系告诉我们您擅长的内容。</p>
+			<p>2. 稿酬情况：100元／稿，大学生作品专栏每月更新一期，每期选稿三篇，敬请关注。</p>
+			<p>3. 投稿方式：采用电子邮件的方式投稿，以便我们与您联系，稿件采用Word文档格式。</p>
+			<p class="red">投稿E-mail: <a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
+			<p>4. 联系方式：</p>
+			<p class="red">微信: Liyufeng5658，QQ: 670106385 </p>
+			<p class="red">想了解本刊内容可扫描右侧二维码添加微刊公众号<br>PS.征稿长期有效，希望早日见到您的文字！</p>
+		</div>
+		<div class="weixin">
+			<div class="erweima">
+				<img src="./images/erweima.jpg" alt="">
+			</div>
+		</div>
 	</div>
 	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
 </body>
