--- a/index.html
+++ b/index.html
@@ -2,107 +2,82 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>还读我诗欢迎您！</title>
+	<title>还读我诗</title>
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
+	<link rel="stylesheet" href="./css/index.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<script src="./js/bdtj.js"></script>
-	<style>
-		.imgbox{
-			margin:0 auto;
-			width:900px;
-			height:500px;
-			margin-top:80px;
-			margin-bottom:150px;
-		}
-		.imgbox img{
-			width:100%;
-			height:100%;
-		}
-		.cont{
-			width:900px;
-			margin:0 auto;
-			margin-bottom:100px;
-		}
-		.cont .text{
-			float:left;
-			padding-left:50px;
-			width:381px;
-		}
-		.cont .text h4{
-			margin-bottom:15px;
-			font-size:20px;
-			color:#666;
-			font-weight: normal;
-			line-height: 24px;
-		}
-		.cont .text p{
-			margin-bottom:10px;
-			font-size:16px;
-			color:#666;
-			line-height: 24px;
-			text-align: justify;
-		}
-		.cont .text p a{
-			color:#e65b61;
-		}
-		.cont .text p a:active{
-			color:#e65b61;
-		}
-		.cont .weixin{
-			float:right;
-			width:469px;
-			min-height: 400px;
-		}
-		.cont .weixin .erweima{
-			margin-top:123px;
-			margin-left:200px;
-			width:200px;
-			height:200px;
-		}
-		.cont .weixin .erweima img{
-			width:100%;
-			height:100%;
-		}
-		.cont .text p.red{
-			color:#e65b61;
-		}
-	</style>
+	<script src="./js/banner.js"></script>
 </head>
 <body>
-	<audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
+	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
         <source src="./song/ganxie.mp3" type="audio/ogg">
-    </audio>
-	<!-- <h1>还读我诗开始征稿啦！</h1> -->
+    </audio> -->
 	<div class="header">
-		<div class="header-cont">
-			<a href="./index.html"><img class="logo" src="./images/logo.jpg" alt=""></a>
+		<div class="header-cont clearfix">
+			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
-				<li><a href="./index.html" class="active">首页</a></li>
-				<li><a href="./about.html">关于我们</a></li>
-				<li><a href="./list.html">往期欣赏</a></li>
-				<li><a href="./college.html">大学生专栏</a></li>
+				<li class="active"><a href="./index.html">首页</a></li>
+				<li><a href="./list.html" target="_blank">往期回顾</a></li>
+				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
+				<li><a href="./about.html" target="_blank">联系我们</a></li>
 			</ul>
 		</div>
 	</div>
-	<div class="imgbox">
-		<img src="./images/hdws.jpg" alt="">
-	</div>
-	<div class="cont clearfix">
-		<div class="text">
-			<h4>作品要求：</h4>
-			<p>1. 体裁及话题：诗歌，散文，小说均可，形式不限，文字不限，观点不限，期待您思想的火花，作者如有个人写作想法，欢迎与本刊编辑部联系告诉我们您擅长的内容。</p>
-			<p>2. 稿酬情况：100元／稿，大学生作品专栏每月更新一期，每期选稿三篇，敬请关注。</p>
-			<p>3. 投稿方式：采用电子邮件的方式投稿，以便我们与您联系，稿件采用Word文档格式。</p>
-			<p class="red">投稿E-mail: <a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
-			<p>4. 联系方式：</p>
-			<p class="red">微信: Liyufeng5658，QQ: 670106385</p>
-			<p class="red">想了解本刊内容可扫描右侧二维码添加微刊公众号<br>PS.征稿长期有效，希望早日见到您的文字！</p>
-		</div>
-		<div class="weixin">
-			<div class="erweima">
-				<img src="./images/erweima.jpg" alt="">
+	<div class="banner">
+		<div class="b-img">
+			<div class="img-list" style="background:url(images/banner1.jpg) center no-repeat;">
+				<p class="text"><a href="http://mp.weixin.qq.com/s/5bMp8OxMmGn8L-ZTvJPNIw" target="_blank">最近更新:《一瓢饮你小小的丰满》</a></p>
 			</div>
+			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
+				<p class="text"><a href="http://mp.weixin.qq.com/s/5bMp8OxMmGn8L-ZTvJPNIw" target="_blank">最近更新:《一瓢饮你小小的丰满》</a></p>
+			</div>
+		</div>
+		<a class="bar-left" href="#"><em></em></a><a class="bar-right" href="#"><em></em></a>
+	</div>
+	<div class="cont-box">
+		<h2>www.huandoo.cn</h2>
+		<div class="host clearfix">
+			<div class="host-box"><a href="javascript:;">还</a></div>
+			<div class="host-box"><a href="javascript:;">读</a></div>
+			<div class="host-box"><a href="javascript:;">我</a></div>
+			<div class="host-box"><a href="javascript:;">诗</a></div>
+		</div>
+		<h2>佳作推荐</h2>
+		<div class="article-cont">
+			<ul class="clearfix">
+				<li>
+					<div class="img-box"><img src="./images/index_img/index4.jpg" alt=""></div>
+					<a class="title" href="http://mp.weixin.qq.com/s/SuwIR-YNzKL-p863konQhQ" target="_blank">醉蟹 <span>｜ 靓丽人生</span></a>
+					<p class="say">昨夜有人送我归来，前面的持火把，后面的吹笛</p>
+				</li>
+				<li>
+					<div class="img-box"><img src="./images/index_img/index1.jpg" alt=""></div>
+					<a class="title" href="http://mp.weixin.qq.com/s/kRbOE_jLH0ycluU6XdjS4w" target="_blank">妹妹，又下雪了 <span>｜ 董卫华</span></a>
+					<p class="say">你再不来，我要下雪了</p>
+				</li>
+				<li>
+					<div class="img-box"><img src="./images/index_img/index2.jpg" alt=""></div>
+					<a class="title" href="http://mp.weixin.qq.com/s/I__suwEsc3Q54TJzOO7OCQ" target="_blank">香槟玫瑰 <span>｜ 郭辉</span></a>
+					<p class="say">吟无用之诗，醉无用之酒，读无用之书，钟无用之情，无用之人的有滋有味</p>
+				</li>
+				<li>
+					<div class="img-box"><img src="./images/index_img/index3.jpg" alt=""></div>
+					<a class="title" href="http://mp.weixin.qq.com/s/46VHLuvS8mFCUUwbx2IQWQ" target="_blank">盎然 <span>｜ 叶小松</span></a>
+					<p class="say">瞳孔深红色，于是世界沉入黄昏</p>
+				</li>
+				<li>
+					<div class="img-box"><img src="./images/index_img/index5.jpg" alt=""></div>
+					<a class="title" href="http://mp.weixin.qq.com/s/iIuS5A3Oee0VJcCOOgM6zg" target="_blank">妈妈，带我回家 <span>｜ 素月绚</span></a>
+					<p class="say">篷户豪门一洞开，万紫千红灌体来，亘古从来亲难舍，消灵磨肉填沧海</p>
+				</li>
+				<li>
+					<div class="img-box"><img src="./images/index_img/index6.jpg" alt=""></div>
+					<a class="title" href="http://mp.weixin.qq.com/s/Id2BufTKshGkcbP_7pPilQ" target="_blank">赶海 <span>｜ 韵依依</span></a>
+					<p class="say">能否与你，琴瑟再御牵手白头，一捧雪端来了前生的约定</p>
+				</li>
+			</ul>
 		</div>
 	</div>
 	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
