change about hd-text css

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<p class="text"><a href="http://mp.weixin.qq.com/s/5bMp8OxMmGn8L-ZTvJPNIw" target="_blank">最近更新:《一瓢饮你小小的丰满》</a></p>
 			</div>
 			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
-				<p class="text"><a href="http://mp.weixin.qq.com/s/5bMp8OxMmGn8L-ZTvJPNIw" target="_blank">最近更新:《一瓢饮你小小的丰满》</a></p>
+				<p class="text"><a href="javascript:alert('敬请期待。')" target="_blank">《大成有话说》</a></p>
 			</div>
 		</div>
 		<a class="bar-left" href="#"><em></em></a><a class="bar-right" href="#"><em></em></a>
