add totop.js & ie/chrome/firefox..

--- a/list.html
+++ b/list.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>还读我诗，往期优秀诗篇</title>
+	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/list.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
+	<script src="./js/totop.js"></script>
 	<script src="./js/bdtj.js"></script>
 </head>
 <body>
@@ -16,7 +18,7 @@
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
 				<li class="active"><a href="./list.html" target="_blank">往期回顾</a></li>
-				<!-- <li><a href="./college.html" target="_blank">大学生专栏</a></li> -->
+				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li><a href="./about.html" target="_blank">联系我们</a></li>
 			</ul>
 		</div>
@@ -529,6 +531,8 @@
 			</li>
 		</ul>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank" title="网站数据统计"> 网站统计</a></div>
+	<!-- 返回顶部 -->
+	<div class="totop"></div>
 </body>
 </html>
