--- a/college.html
+++ b/college.html
@@ -3,9 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>还读我诗开始征稿啦！</title>
+	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
+	<script src="./js/totop.js"></script>
 	<script src="./js/bdtj.js"></script>
 	<style>
 		body{
@@ -76,7 +78,6 @@
 	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
         <source src="./song/ganxie.mp3" type="audio/ogg">
     </audio> -->
-	<!-- <h1>还读我诗开始征稿啦！</h1> -->
 	<div class="imgbox">
 		<img src="./images/hdws.jpg" alt="">
 	</div>
@@ -97,6 +98,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank" title="网站数据统计"> 网站统计</a></div>
+	<!-- 返回顶部 -->
+	<div class="totop"></div>
 </body>
 </html>
