--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>还读我诗</title>
+	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/index.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<script src="./js/bdtj.js"></script>
 	<script src="./js/banner.js"></script>
+	<script src="./js/totop.js"></script>
 </head>
 <body>
 	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
@@ -80,6 +82,8 @@
 			</ul>
 		</div>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank"> 网站统计</a></div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a> | 技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></div>
+	<!-- 返回顶部 -->
+	<div class="totop"></div>
 </body>
 </html>
