--- a/college.html
+++ b/college.html
@@ -78,6 +78,17 @@
 	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
         <source src="./song/ganxie.mp3" type="audio/ogg">
     </audio> -->
+    <div class="header">
+		<div class="header-cont clearfix">
+			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
+			<ul class="nav">
+				<li><a href="./index.html">首页</a></li>
+				<li><a href="./list.html" target="_blank">往期回顾</a></li>
+				<li class="active"><a href="./college.html" target="_blank">大学生专栏</a></li>
+				<li><a href="./about.html" target="_blank">联系我们</a></li>
+			</ul>
+		</div>
+	</div>
 	<div class="imgbox">
 		<img src="./images/hdws.jpg" alt="">
 	</div>
@@ -98,7 +109,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" target="_blank" title="网站数据统计"> 网站统计</a></div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a> | 技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></div>
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
 </body>
