--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 		</div>
 		<p class="declare">声明：网站所展示诗文均为作者投稿于平台“还读我诗”，一切版权归作者本人所有，如若<span class="show">转载请务必先与作者联系</span>！！谢谢</p>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a> | 技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></div>
+	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></div>
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
 </body>
