--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
         <source src="./song/ganxie.mp3" type="audio/ogg">
     </audio> -->
+    <!-- header begin -->
 	<div class="header">
 		<div class="header-cont clearfix">
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
@@ -27,6 +28,8 @@
 			</ul>
 		</div>
 	</div>
+	<!-- header end -->
+	<!-- banner begin -->
 	<div class="banner">
 		<div class="b-img">
 			<div class="img-list" style="background:url(images/banner1.jpg) center no-repeat;">
@@ -38,14 +41,17 @@
 		</div>
 		<a class="bar-left" href="#"><em></em></a><a class="bar-right" href="#"><em></em></a>
 	</div>
+	<!-- banner end -->
+	<!-- cont-box begin -->
 	<div class="cont-box">
-		<h2>www.huandoo.cn</h2>
+		<!-- name begin -->
 		<div class="host clearfix">
 			<div class="host-box"><a href="javascript:;">还</a></div>
 			<div class="host-box"><a href="javascript:;">读</a></div>
 			<div class="host-box"><a href="javascript:;">我</a></div>
 			<div class="host-box"><a href="javascript:;">诗</a></div>
 		</div>
+		<!-- name end -->
 		<h2>佳作推荐</h2>
 		<div class="article-cont">
 			<ul class="clearfix">
@@ -82,7 +88,13 @@
 			</ul>
 		</div>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a> | 技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></div>
+	<!-- cont-box end -->
+	<!-- footer begin -->
+	<div class="footer">
+		<p>Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
+		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
+	</div>
+	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
 </body>
