--- a/list.html
+++ b/list.html
@@ -334,7 +334,12 @@
 			</li>
 		</ul>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></div>
+	<!-- footer begin -->
+	<div class="footer">
+		<p>Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
+		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
+	</div>
+	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
 </body>
