--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
 				<p>体裁话题：诗歌，散文，小说均可。</p>
 				<p>投稿方式：电子邮件投稿，Word文档格式。</p>
-				<p>个人微信：<span>Whia2021</span></p>
+				<p>个人微信：<span>Whia2021</span> (大成)</p>
 				<p>QQ：<span>1722740047</span> <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
 				<!-- <p></p> -->
 			</div>
@@ -62,7 +62,12 @@
 		</div>
 		<p class="declare">声明：网站所展示诗文均为作者投稿于平台“还读我诗”，一切版权归作者本人所有，如若<span class="show">转载请务必先与作者联系</span>！！谢谢</p>
 	</div>
-	<div class="footer">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></div>
+	<!-- footer begin -->
+	<div class="footer">
+		<p>Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
+		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
+	</div>
+	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
 </body>
