--- a/list.html
+++ b/list.html
@@ -35,7 +35,7 @@
 				<div class="img-box">
 					<img src="./images/list_img/article47.jpg" alt="">
 				</div>
-				<p class="msg"><a href="http://mp.weixin.qq.com/s/vg8IwlTqDgJqYx0QC9lQLA" target="_blank">春风十里不如去造房子 | 建筑之旅</a></p>
+				<p class="msg"><a href="http://mp.weixin.qq.com/s/vg8IwlTqDgJqYx0QC9lQLA" target="_blank">春风十里不如去造房子 | Miss 罗</a></p>
 			</li>
 			<li>
 				<div class="img-box">
