--- a/list.html
+++ b/list.html
@@ -35,13 +35,13 @@
 				<div class="img-box">
 					<img src="./images/list_img/article47.jpg" alt="">
 				</div>
-				<p class="msg"><a href="http://mp.weixin.qq.com/s/vg8IwlTqDgJqYx0QC9lQLA" target="_blank">春风十里不如去造房子 | Miss 罗</a></p>
+				<p class="msg"><a href="http://mp.weixin.qq.com/s/vg8IwlTqDgJqYx0QC9lQLA" target="_blank">春风十里不如去造房子 | Miss罗</a></p>
 			</li>
 			<li>
 				<div class="img-box">
 					<img src="./images/list_img/article46.jpg" alt="">
 				</div>
-				<p class="msg"><a href="http://mp.weixin.qq.com/s/5bMp8OxMmGn8L-ZTvJPNIw" target="_blank">一瓢饮你小小的丰满 | 还读我诗</a></p>
+				<p class="msg"><a href="http://mp.weixin.qq.com/s/5bMp8OxMmGn8L-ZTvJPNIw" target="_blank">一瓢饮你小小的丰满 | 还读</a></p>
 			</li>
 			<li>
 				<div class="img-box">
