font-size 200px

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<li class="active"><a href="./index.html">首页</a></li>
 				<li><a href="./list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
-				<li><a href="./about.html" target="_blank">联系我们</a></li>
+				<li><a href="./about.html" target="_blank">关于我们</a></li>
 			</ul>
 		</div>
 	</div>
@@ -51,6 +51,12 @@
 			<div class="host-box"><a href="javascript:;">我</a></div>
 			<div class="host-box"><a href="javascript:;">诗</a></div>
 		</div>
+		<!-- <div class="host clearfix">
+			<div class="host-box name_1"></div>
+			<div class="host-box name_2"></div>
+			<div class="host-box name_3"></div>
+			<div class="host-box name_4"></div>
+		</div> -->
 		<!-- name end -->
 		<h2>佳作推荐</h2>
 		<div class="article-cont">
