--- a/college.html
+++ b/college.html
@@ -89,7 +89,7 @@
 				<li><a href="./index.html">首页</a></li>
 				<li><a href="./list.html" target="_blank">往期回顾</a></li>
 				<li class="active"><a href="./college.html" target="_blank">大学生专栏</a></li>
-				<li><a href="./about.html" target="_blank">联系我们</a></li>
+				<li><a href="./about.html" target="_blank">关于我们</a></li>
 			</ul>
 		</div>
 	</div>
