--- a/list.html
+++ b/list.html
@@ -19,7 +19,7 @@
 				<li><a href="./index.html">首页</a></li>
 				<li class="active"><a href="./list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
-				<li><a href="./about.html" target="_blank">联系我们</a></li>
+				<li><a href="./about.html" target="_blank">关于我们</a></li>
 			</ul>
 		</div>
 	</div>
