--- a/college.html
+++ b/college.html
@@ -119,7 +119,7 @@
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
-		<p class="copyright">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
+		<p class="copyright">Copyright © 2016-2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
 	<!-- footer end -->
