--- a/index.html
+++ b/index.html
@@ -45,18 +45,18 @@
 	<!-- cont-box begin -->
 	<div class="cont-box">
 		<!-- name begin -->
-		<div class="host clearfix">
+		<!-- <div class="host clearfix">
 			<div class="host-box"><a href="javascript:;">还</a></div>
 			<div class="host-box"><a href="javascript:;">读</a></div>
 			<div class="host-box"><a href="javascript:;">我</a></div>
 			<div class="host-box"><a href="javascript:;">诗</a></div>
-		</div>
-		<!-- <div class="host clearfix">
+		</div> -->
+		<div class="host clearfix">
 			<div class="host-box name_1"></div>
 			<div class="host-box name_2"></div>
 			<div class="host-box name_3"></div>
 			<div class="host-box name_4"></div>
-		</div> -->
+		</div>
 		<!-- name end -->
 		<h2>佳作推荐</h2>
 		<div class="article-cont">
@@ -107,7 +107,7 @@
 	<!-- cont-box end -->
 	<!-- footer begin -->
 	<div class="footer">
-		<p class="copyright">Copyright © 2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
+		<p class="copyright">Copyright © 2016-2017 还读我诗 版权所有 | <a class="tongji" href="http://tongji.baidu.com/web/welcome/ico?s=37fabebe62ab6e6736175261cff22907" title="网站数据统计" target="_blank"> 网站统计</a></p> 
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
 	<!-- footer end -->
