--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 				<p>投稿方式：电子邮件投稿，Word文档格式。</p>
 				<p>个人微信：<span>Whia2021</span> (大成)</p>
 				<p>QQ：<span>1722740047</span> <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
-				<!-- <p></p> -->
+				<p class="tips">ps:扫描右方二维码添加“还读我诗”微信公众号</p>
 			</div>
 			<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 		</div>
