--- a/about.html
+++ b/about.html
@@ -52,11 +52,8 @@
 			<div class="msg-text">
 				<p>官网地址：www.huandoo.cn</p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
-				<p>体裁话题：诗歌，散文，小说均可。</p>
-				<p>投稿方式：电子邮件投稿，Word文档格式。</p>
 				<p>个人微信：<span>Whia2021</span> (大成)</p>
-				<p>QQ：<span>1722740047</span> <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
-				<p class="tips">ps:扫描右方二维码添加“还读我诗”微信公众号</p>
+				<p><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
 			</div>
 			<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 		</div>
