laji about page

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>联系我们</title>
+	<title>关于我们</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
@@ -27,37 +27,21 @@
 		</div>
 	</div>
 	<div class="content">
-		<h1>关于"还读我诗"：</h1>
+		<h1>"还读我书"的摊主：@大成</h1>
 		<div class="about">
-			<div class="center-text">
-				<h3>读山海经 <span class="name">｜ 陶渊明</span></h3>
-				<p>孟夏草木长，绕屋树扶疏。</p>
-				<p>众鸟欣有托，吾亦爱吾庐。 </p>
-				<p>既耕亦已种，时还读我书。</p>
-				<p>穷巷隔深辙，颇回故人车。  </p>
-				<p>欢然酌春酒，摘我园中蔬。 </p>
-				<p>微雨从东来，好风与之俱。</p>
-				<p>泛览周王传，流观山海图。 </p>
-				<p>俯仰终宇宙，不乐复何如！</p>
-			</div>
-			<div class="hd-text">
-				<p>今也渊明</p>
-				<p class="indent">时还读书</p>
-				<p>左右相顾</p>
-				<p class="indent">不知谁坐</p>
-			</div>
+			<p>80后建筑设计师，一本正经的文字发烧友，喜好收集文字，广交朋友，乐此不疲.</p>
 		</div>
-		<h1>联系方式：</h1>
+		<h1>联系我们：</h1>
 		<div class="msg clearfix">
 			<div class="msg-text">
-				<p>官网地址：www.huandoo.cn</p>
+				<p>网址<span style="color:#fff">网站</span>：www.huandoo.cn</p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
-				<p>个人微信：<span>Whia2021</span> (大成)</p>
-				<p><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
+				<p>个人微信：Whia2021</p>
+				<p class="qq"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
 			</div>
-			<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 		</div>
-		<p class="declare">声明：网站所展示诗文均为作者投稿于平台“还读我诗”，一切版权归作者本人所有，如若<span class="show">转载请务必先与作者联系</span>！！谢谢</p>
+		<h1>关注我们：</h1>
+		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
