laji about page laji

--- a/about.html
+++ b/about.html
@@ -37,10 +37,9 @@
 				<p>网址<span style="color:#fff">网站</span>：www.huandoo.cn</p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
 				<p>个人微信：Whia2021</p>
-				<p class="qq"><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1722740047&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1722740047:41" alt="点击这里给我发消息" title="点击这里给我发消息"/></a></p>
 			</div>
 		</div>
-		<h1>关注我们：</h1>
+		<h1 class="guanzhu">关注我们：</h1>
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 	</div>
 	<!-- footer begin -->
