add new article

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="banner">
 		<div class="b-img">
 			<div class="img-list" style="background:url(images/banner1.jpg) center no-repeat;">
-				<p class="text"><a href="http://mp.weixin.qq.com/s/7hwg6cWhSFHFP2EqsG53iQ" target="_blank">最近更新:《半径3米之内》</a></p>
+				<p class="text"><a href="http://mp.weixin.qq.com/s/2V4sgrRxbT7vafGOvttoTA" target="_blank">最近更新:《补丁，是衣裳的花瓣》</a></p>
 			</div>
 			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
 				<p class="text"><a href="javascript:alert('点击“大学生专栏”查看详情，欢迎大家踊跃投稿！')" target="_blank">大学生们，文学作品开始征稿啦！</a></p>
