--- a/college.html
+++ b/college.html
@@ -18,11 +18,26 @@
 			margin:0 auto;
 			width:1000px;
 			min-height: 650px;
-			line-height:650px;
-			font-size: 70px;
 			color:#999;
 			text-align: center;
 			word-spacing: 200px;
+		}
+		.cont .bt{
+			margin-bottom:50px;
+		}
+		.cont .zhengji{
+			margin-top:120px;
+			margin-bottom:50px;
+			font-size: 60px;
+			letter-spacing: 32px;
+		}
+		.cont .title{
+			color:#999;
+			font-size:40px;
+		}
+		.cont .text{
+			font-size:40px;
+			color:#ff8c69;
 		}
 	</style>
 </head>
@@ -42,7 +57,13 @@
 		</div>
 	</div>
 	<div class="box">
-		<div class="cont">作品征集中...</div>
+		<div class="cont">
+			<p class="zhengji">作品征集中</p>
+			<p class="title">投稿邮箱</p>
+			<p class="text bt">huanduwoshi2016@126.com</p>
+			<p class="title">联系方式</p>
+			<p class="text">Liyufeng5658(个人微信)</p>
+		</div>
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
