change about page

--- a/about.html
+++ b/about.html
@@ -27,19 +27,19 @@
 		</div>
 	</div>
 	<div class="content">
-		<h1>"还读我书"的摊主：@大成</h1>
+		<h1>“还读我书”团队</h1>
 		<div class="about">
-			<p>80后建筑设计师，一本正经的文字发烧友，喜好收集文字，广交朋友，乐此不疲.</p>
+			<!-- <p>一群正经的文字发烧友，喜好收集文字，广交朋友，乐此不疲.</p> -->
 		</div>
-		<h1>联系我们：</h1>
+		<h1>联系我们</h1>
 		<div class="msg clearfix">
 			<div class="msg-text">
-				<p>网址<span style="color:#fff">网站</span>：www.huandoo.cn</p>
+				<p>公号网址：<a href="http://www.huandoo.cn" target="_blank">www.huandoo.cn</a></p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
 				<p>个人微信：Whia2021</p>
 			</div>
 		</div>
-		<h1 class="guanzhu">关注我们：</h1>
+		<h1 class="guanzhu">关注我们</h1>
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
 	</div>
 	<!-- footer begin -->
