--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 		</div>
 	</div>
 	<div class="content">
-		<h1>“还读我书”团队</h1>
+		<h1>“还读我诗”团队</h1>
 		<div class="about">
 			<!-- <p>一群正经的文字发烧友，喜好收集文字，广交朋友，乐此不疲.</p> -->
 		</div>
