--- a/list.html
+++ b/list.html
@@ -683,7 +683,7 @@
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
-		<p class="copyright">Copyright © 2016-2017 还读我诗 版权所有</p> 
+		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
 		<p>技术支持: <a class="tongji" href="javascript:;" title="做人如果没有梦想，和咸鱼又有什么区别">Kevin</a></p>
 	</div>
 	<!-- footer end -->
