--- a/about.html
+++ b/about.html
@@ -4,15 +4,14 @@
 	<meta charset="UTF-8">
 	<title>关于我们</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
+	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/about.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<script src="./js/totop.js"></script>
-	<script src="./js/bdtj.js"></script>
-	<style>
-		
-	</style>
 </head>
 <body>
 	<div class="header">
@@ -37,10 +36,16 @@
 				<p>公号网址：<a href="http://www.huandoo.cn" target="_blank">www.huandoo.cn</a></p>
 				<p>投稿邮箱：<a href="mailto:huanduwoshi2016@126.com">huanduwoshi2016@126.com</a></p>
 				<p>个人微信：Whia2021</p>
+				<a class="dacheng btn btn-default" href="./dacheng.html" target="_blank"> 点击获取二维码</a>
 			</div>
 		</div>
 		<h1 class="guanzhu">关注我们</h1>
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
+		<!-- UY BEGIN -->
+		<h1>留话给我们</h1>
+		<div id="uyan_frame"></div>
+			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
+		<!-- UY END -->
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
@@ -50,5 +55,8 @@
 	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
+
+	<script src="./js/totop.js"></script>
+	<script src="./js/bdtj.js"></script>
 </body>
 </html>
