--- a/college.html
+++ b/college.html
@@ -4,14 +4,14 @@
 	<meta charset="UTF-8">
 	<title>还读我诗开始征稿啦！</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<script src="./js/totop.js"></script>
-	<script src="./js/bdtj.js"></script>
 	<style>
 		body{
-			/*background: #bfe3f9;*/
 			background: #fff;
 		}
 		.cont{
@@ -73,5 +73,8 @@
 	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
+
+	<script src="./js/totop.js"></script>
+	<script src="./js/bdtj.js"></script>
 </body>
 </html>
