--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<title>还读我诗</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/index.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
-	<script src="./js/bdtj.js"></script>
-	<script src="./js/banner.js"></script>
-	<script src="./js/totop.js"></script>
 </head>
 <body>
 	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
@@ -36,7 +36,7 @@
 				<p class="text"><a href="http://mp.weixin.qq.com/s/oaO9u9d2uRUviFpYEtnY9w" target="_blank">最近更新:《翠鸟啼》</a></p>
 			</div>
 			<div class="img-list" style="background:url(images/banner2.jpg) center no-repeat;">
-				<p class="text"><a href="javascript:alert('点击“大学生专栏”查看详情，欢迎大家踊跃投稿！')" target="_blank">大学生们，文学作品开始征稿啦！</a></p>
+				<p class="text"><a href="./college.html" target="_blank">大学生们，文学作品开始征稿啦！</a></p>
 			</div>
 		</div>
 		<a class="bar-left" href="#"><em></em></a><a class="bar-right" href="#"><em></em></a>
@@ -113,5 +113,9 @@
 	<!-- footer end -->
 	<!-- 返回顶部 -->
 	<div class="totop"></div>
+
+	<script src="./js/bdtj.js"></script>
+	<script src="./js/banner.js"></script>
+	<script src="./js/totop.js"></script>
 </body>
 </html>
