--- a/list.html
+++ b/list.html
@@ -4,13 +4,14 @@
 	<meta charset="UTF-8">
 	<title>还读我诗，往期优秀诗篇</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
+	<meta name="keywords" content="" />
+	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/list.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
 	<!-- <script src="https://cdn.bootcss.com/jquery_lazyload/1.9.7/jquery.lazyload.js"></script> -->
-	<script src="./js/totop.js"></script>
-	<script src="./js/bdtj.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -698,5 +699,8 @@
     		});
 		});
 	</script> -->
+
+	<script src="./js/totop.js"></script>
+	<script src="./js/bdtj.js"></script>
 </body>
 </html>
