add message page

--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
 	<link rel="shortcut icon" href="./images/hdws.ico" type="image/x-icon" />
-	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./css/common.css">
 	<link rel="stylesheet" href="./css/about.css">
 	<script src="https://cdn.bootcss.com/jquery/1.9.1/jquery.js"></script>
@@ -22,6 +21,7 @@
 				<li><a href="./list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li class="active"><a href="./about.html" target="_blank">关于我们</a></li>
+				<li><a href="./message.html" target="_blank">留言板</a></li>
 			</ul>
 		</div>
 	</div>
@@ -41,11 +41,6 @@
 		</div>
 		<h1 class="guanzhu">关注我们</h1>
 		<div class="img-box"><img src="./images/erweima.jpg" alt=""></div>
-		<!-- UY BEGIN -->
-		<h1>留话给我们</h1>
-		<div id="uyan_frame"></div>
-			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
-		<!-- UY END -->
 	</div>
 	<!-- footer begin -->
 	<div class="footer">
