--- a/list.html
+++ b/list.html
@@ -22,6 +22,7 @@
 				<li class="active"><a href="./list.html" target="_blank">往期回顾</a></li>
 				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li><a href="./about.html" target="_blank">关于我们</a></li>
+				<li><a href="./message.html" target="_blank">留言板</a></li>
 			</ul>
 		</div>
 	</div>
