--- a/message.html
+++ b/message.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>还读我诗开始征稿啦！</title>
+	<title>有话您就说，欢迎给予建议</title>
 	<meta http-equiv = "X-UA-Compatible" content = "IE=edge,chrome=1" />
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> -->
 	<meta name="keywords" content="" />
@@ -14,58 +14,46 @@
 		body{
 			background: #fff;
 		}
-		.cont{
-			margin:0 auto;
+		.message-box{
 			width:1000px;
-			min-height: 650px;
-			color:#999;
-			text-align: center;
-			word-spacing: 200px;
+			margin:0 auto;
 		}
-		.cont .bt{
-			margin-bottom:50px;
+		h1{
+			margin:30px 0 60px 0;
+			font-size:24px;
+			/*color:#ff8c69;*/
+			color:#666;
+			font-weight:normal;
 		}
-		.cont .zhengji{
-			margin-top:120px;
-			margin-bottom:50px;
-			font-size: 60px;
-			letter-spacing: 32px;
-		}
-		.cont .title{
-			color:#999;
-			font-size:40px;
-		}
-		.cont .text{
-			font-size:40px;
-			color:#ff8c69;
+		.hide{
+			width:100%;
+			height:20px;
+			margin-top:-20px;
+			background: #AAB2B8;
 		}
 	</style>
 </head>
 <body>
-	<!-- <audio id="audio" preload="auto" controls="controls" hidden="hidden" autoplay="autoplay" loop="loop">
-        <source src="./song/ganxie.mp3" type="audio/ogg">
-    </audio> -->
     <div class="header">
 		<div class="header-cont clearfix">
 			<a class="logo" href="./index.html"><img src="./images/logo.jpg" alt=""></a>
 			<ul class="nav">
 				<li><a href="./index.html">首页</a></li>
 				<li><a href="./list.html" target="_blank">往期回顾</a></li>
-				<li class="active"><a href="./college.html" target="_blank">大学生专栏</a></li>
+				<li><a href="./college.html" target="_blank">大学生专栏</a></li>
 				<li><a href="./about.html" target="_blank">关于我们</a></li>
-				<li><a href="./message.html" target="_blank">留言板</a></li>
+				<li class="active"><a href="./message.html" target="_blank">留言板</a></li>
 			</ul>
 		</div>
 	</div>
-	<div class="box">
-		<div class="cont">
-			<p class="zhengji">作品征集中</p>
-			<p class="title">投稿邮箱</p>
-			<p class="text bt">huanduwoshi2016@126.com</p>
-			<p class="title">联系方式</p>
-			<p class="text">Liyufeng5658(个人微信)</p>
-		</div>
+	<div class="message-box">
+		<h1>如果您对于我们平台有好的建议或想法，“还读我诗 团队”欢迎您在下方留言：</h1>
+		<!-- UY BEGIN -->
+		<div id="uyan_frame"></div>
+			<script type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=2140360"></script>
+		<!-- UY END -->
 	</div>
+	<div class="hide"></div>
 	<!-- footer begin -->
 	<div class="footer">
 		<p class="copyright">Copyright © 2016-2017 还读我诗 All Rights Reversed</p> 
