change share btn

--- a/index.html
+++ b/index.html
@@ -122,13 +122,15 @@ var jiathis_config={
 	siteNum:15,
 	sm:"tsina,weixin,qzone,cqq,tqq,renren,feixin,tieba,douban,kaixin001,fb,twitter,ishare,fav",
 	summary:"",
+	marginTop:300,
 	showClose:true,
-	shortUrl:true,
+	shortUrl:false,
 	hideMore:true
 }
 </script>
 <script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?uid=2140360&btn=r2.gif&move=1" charset="utf-8"></script>
 <!-- JiaThis Button END -->
+
 
 
 	<script src="./js/bdtj.js"></script>
