--- a/list.html
+++ b/list.html
@@ -712,14 +712,14 @@
 var jiathis_config = {
 	data_track_clickback:'true',
 	marginTop:300,
-	showClose:true,
+	showClose:false,
 	shortUrl:false,
 	hideMore:true
 };
 </script>
 <script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;btn=r2.gif&amp;uid=2140360" charset="utf-8"></script>
 <!-- JiaThis Button END -->
-	
+
 	<script src="./js/totop.js"></script>
 	<script src="./js/bdtj.js"></script>
 </body>
